k3s/mysite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  labels:
    app: mysite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: my-site
        image: shlomi99/fabric:kube
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
spec:
  selector:
    app: mysite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-mysite
  labels:
    app: second-mysite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second-mysite
  template:
    metadata:
      labels:
        app: second-mysite
    spec:
      containers:
      - name: second-mysite
        image: shlomi99/fabric:kube
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: second-mysite-service
spec:
  selector:
    app: second-mysite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mysite-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`example.com`)
    kind: Rule
    services:
    - name: mysite-service
      port: 80
    - name: second-mysite-service
      port: 80    
  - match: Host(`example.com/example`)
    kind: Rule
    services:
    - name: mysite-service
      port: 80
    - name: second-mysite-service
      port: 80  
    tls:
  secretName: cerficate-secret-tls
